# ncpartitioner

./: Dockerfile  README.md  pyproject.toml  wsgi.py
.github/workflows/: black.yml  docker-publish.yml  python-ci.yml
ncpartitioner/: __init__.py  ncpartitioner.py  queue_client.py  response.py  routes.py  sanitize.py  worker.py
output/: tasmax_day_PCIC_Blended_Observations_v1_1950-2012.nc  tasmax_day_PCIC_Blended_Observations_v1_1950-2012.nc1764884200  tasmax_day_PCIC_Blended_Observations_v1_1950-2012.nc1764884465  tasmax_day_PCIC_Blended_Observations_v1_1950-2012.nc1764884725  tasmax_day_PCIC_Blended_Observations_v1_1950-2012_1765418114.nc.pid1149810.ncks.tmp  tasmax_day_PCIC_Blended_Observations_v1_1950-2012_1765505160.nc.pid1966853.ncks.tmp  tasmax_day_PCIC_Blended_Observations_v1_1950-2012_1765505302.nc.pid1968358.ncks.tmp  tasmax_day_PCIC_Blended_Observations_v1_1950-2012_1765590848.nc.pid2835075.ncks.tmp
tests/: conftest.py  test_response.py  test_routes.py  test_sanitize.py
tests/data/: tasmax.nc
tests/output/: .gitignore  nccopy.nc
