[project]
name = "ncpartitioner"
version = "0.1.0"
description = ""
authors = [
    {name = "Lee Zeman",email = "lzeman@uvic.ca"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "ncpartitioner"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pytest (>=8.1,<9.0)"
]
